--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -38,7 +42,6 @@
             placeholder="Search the product you want"
             aria-label="Recipient's username"
             aria-describedby="button-addon2"
-            
           />
           <button class="btn btn-warning" type="button" id="button-search">
             Search
