--- a/index.html
+++ b/index.html
@@ -18,13 +18,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
   </head>
 
   <body>
@@ -60,7 +53,7 @@
           <div class="cart mt-4" id="my-cart">
             <table class="table">
               <thead>
-                <h1>My-Cart</h1>
+                <h1 class="text-center">My-Cart</h1>
                 <tr>
                   <th scope="col"></th>
                   <th scope="col"></th>
@@ -101,7 +94,7 @@
               </tbody>
             </table>
             <div class="parces text-center">
-              <button class="btn btn-primary text-center">Buy Now</button>
+              <button class="btn btn-warning text-center">Buy Now</button>
             </div>
           </div>
         </div>
